--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -20,7 +21,30 @@
     </header>
     <main>
         <section id="form-section">
-
+            <div>
+                <form name="newAdress">
+                    <div>
+                        <label for="cep">CEP:</label>
+                        <input name="cep" id="cep" type="text" placeholder="CEP">
+                    </div>
+                    <div>
+                        <label for="street">Logradouro:</label>
+                        <input name="street" id="street" type="text" placeholder="Logradouro">
+                    </div>
+                    <div>
+                        <label for="number">Número:</label>
+                        <input name="number" id="number" type="text" placeholder="Número">
+                    </div>
+                    <div>
+                        <label for="city">Cidade:</label>
+                        <input name="city" id="street" type="text" placeholder="Cidade">
+                    </div>
+                </form>
+                <div>
+                    <button type="submit">Salvar</button>
+                    <button>Limpar</button>
+                </div>
+            </div>
         </section>
         <section id="list-section">
             <div>
@@ -36,4 +60,5 @@
         </section>
     </main>
 </body>
+
 </html>
