--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         <input name="city" id="street" class="form-input" type="text" placeholder="Cidade" disabled>
                     </div>
                 </form>
-                <div>
-                    <button type="submit">Salvar</button>
-                    <button>Limpar</button>
+                <div class="btn-container">
+                    <button class="btn btn-left" type="submit">Salvar</button>
+                    <button class="btn btn-right">Limpar</button>
                 </div>
             </div>
         </section>
