--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="nav-container">
         <nav class="nav-main">
             <h1>DSViaCEP</h1>
-            <div class="contact-link">contato</div>
+            <div class="contact-link">Contato</div>
         </nav>
     </header>
     <main>
@@ -48,16 +48,16 @@
                 </div>
             </div>
         </section>
-        <section id="list-section">
-            <div>
+        <section id="list-section" class="list-container">
+            <div class="card-list-item">
                 <h3>São Paulo</h3>
-                <p>Rua dos Jardins, 720</p>
-                <p>11200-345</p>
+                <p class="address-line">Rua dos Jardins, 720</p>
+                <p class="address-cep">11200-345</p>
             </div>
-            <div>
+            <div class="card-list-item">
                 <h3>São Paulo</h3>
-                <p>Rua dos Jardins, 720</p>
-                <p>11200-345</p>
+                <p class="address-line">Rua dos Jardins, 720</p>
+                <p class="address-cep">11200-345</p>
             </div>
         </section>
     </main>
