--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section id="form-section" class="form-container">
             <div class="card-form">
-                <form name="newAdress">
+                <form name="newAddress">
                     <div class="form-control">
                         <label for="cep">CEP:</label>
                         <input name="cep" id="cep" class="form-input" type="text" placeholder="CEP">
@@ -61,6 +61,7 @@
             </div>
         </section>
     </main>
+    <script type="module" src="js/dsviacep.js"></script>
 </body>
 
 </html>
