--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     </div>
                     <div class="form-control">
                         <label for="street">Logradouro:</label>
-                        <input name="street" id="street" class="form-input" type="text" placeholder="Logradouro" disabled>
+                        <input name="street" id="street" class="form-input" type="text" placeholder="Logradouro"
+                            disabled>
                     </div>
                     <div class="form-control">
                         <label for="number">Número:</label>
@@ -49,11 +50,6 @@
             </div>
         </section>
         <section id="list-section" class="list-container">
-            <div class="card-list-item">
-                <h3>São Paulo</h3>
-                <p class="address-line">Rua dos Jardins, 720</p>
-                <p class="address-cep">11200-345</p>
-            </div>
             <div class="card-list-item">
                 <h3>São Paulo</h3>
                 <p class="address-line">Rua dos Jardins, 720</p>
